# ISDE

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  ISDE_PLATFORM_PLAN.md  ISW_LAYOUT.md  LICENSE  README  TODO.md
.claude/: settings.json
.claude/skills/diagnose/: SKILL.md
.claude/skills/scope/: SKILL.md
calc/: CMakeLists.txt
calc/src/: actions.c  calc.h  main.c  math.c
common/: CMakeLists.txt
common/data/: autostart  fm.toml  isde-calc.desktop  isde-fm.desktop  isde-settings.desktop  isde-term.desktop  isde-x11.desktop  isde.desktop  isde.toml
common/data/fm-actions/: extract-here.desktop  extract-here.sh  extract-to-folder.desktop  extract-to-folder.sh
common/data/icons/isde-standard/: index.theme
common/data/themes/: default-dark.theme  default-light.theme
displayd/: CMakeLists.txt
displayd/src/: main.c
dm/: CMakeLists.txt
dm/data/: isde-dm.service  isde-dm.toml  org.isde.DisplayManager.conf
dm/data/rc.d/: isde-dm.in
dm/data/runit/: finish  run
dm/src/: auth.c  dbus.c  dm.c  dm.h  greeter_proc.c  ipc.c  main.c  platform.h  platform_freebsd.c  platform_linux.c  power.c  seat.c  session.c
dm/src/greeter/: clock.c  greeter.c  greeter.h  ipc.c  main.c  sessions.c
fm/: CMakeLists.txt  MULTI_WINDOW_PLAN.md  TODO.md
fm/src/: actions.c  browser.c  clipboard.c  context.c  daemon.c  dialogs.c  dnd.c  fileops.c  fileview.c  fm.c  fm.h  fm_mountd.c  fm_mountd.h  icons.c  instance.c  jobqueue.c  main.c  mounts.c  navbar.c  navigate.c  places.c  progress.c  shortcuts.c  thumbs.c
isw-graph/: CMakeLists.txt  NOTICE  isw-graph.pc.in
isw-graph/demo/: demo.c
isw-graph/include/isw-graph/: GraphBar.h  GraphBarP.h  GraphCommon.h  GraphCommonP.h  GraphLine.h  GraphLineP.h  GraphScatter.h  GraphScatterP.h
isw-graph/kplot-gen/: config.h
isw-graph/src/: GraphBar.c  GraphCommon.c  GraphLine.c  GraphScatter.c
libisde/: CMakeLists.txt  isde.pc.in
libisde/include/isde/: isde-config.h  isde-cpufreq.h  isde-dbus.h  isde-desktop.h  isde-dialog.h  isde-ewmh.h  isde-filechooser.h  isde-ipc.h  isde-mime.h  isde-platform.h  isde-power.h  isde-randr.h  isde-settings-plugin.h  isde-theme.h  isde-tray.h  isde-xdg.h
libisde/platform/X11/: isde-display-x11.c  isde-ewmh-x11.c  isde-ipc-x11.c  isde-platform-x11.c  isde-platform-x11.h  isde-power-x11.c  isde-rootprop-x11.c  isde-startup-x11.c
libisde/src/: isde-config-write.c  isde-config.c  isde-cpufreq.c  isde-dbus.c  isde-desktop.c  isde-dialog.c  isde-dpms.c  isde-ewmh.c  isde-filechooser.c  isde-ipc.c  isde-mime.c  isde-power.c  isde-randr.c  isde-theme.c  isde-tray.c  isde-xdg.c
mountd/: CMakeLists.txt
mountd/data/: isde-mountd.service  org.isde.DiskManager.conf
mountd/data/rc.d/: isde-mountd.in
mountd/data/runit/: run
mountd/src/: dbus.c  devices.c  luks.c  main.c  mount_ops.c  mountd.c  mountd.h  platform.h  platform_freebsd.c  platform_linux.c
panel/: CMakeLists.txt
panel/src/: calendar.c  clock.c  main.c  pager.c  panel-x11.c  panel-x11.h  panel.c  panel.h  startmenu.c  taskbar.c  tray-audio-pipewire.c  tray-audio-popup.c  tray-audio-state.c  tray-audio.c  tray-audio.h  tray-battery-popup.c  tray-battery.c  tray-battery.h  tray-bt-agent.c  tray-bt-bluez.c  tray-bt-menu.c  tray-bt.c  tray-bt.h  tray-mount-dbus.c  tray-mount-password.c  tray-mount-popup.c  tray-mount.c  tray-mount.h  tray-net-agent.c  tray-net-connman.c  tray-net-menu.c  tray-net.c  tray-net.h  tray.c
platform/: isde-xdg.c
platform/X11/common/: desktop.c  desktop.h  dpms.c  dpms.h  ewmh.c  ewmh.h  isde-monitor-xcb.c  isde-monitor-xcb.h  randr.c  randr.h  theme-x11.c
platform/X11/session/: CMakeLists.txt
platform/X11/session/src/: confirm.c  main.c  session.c  session.h
platform/X11/term/src/: term-tsm.c  term-widget.c
platform/X11/wm/: CMakeLists.txt
platform/X11/wm-compositor/: CMakeLists.txt
platform/X11/wm-compositor/src/: compositor.c  compositor.h
platform/X11/wm/src/: desktops.c  ewmh.c  frame.c  keys.c  main.c  placement.c  render.c  switcher.c  wm.c  wm.h
platform/common/: dbus.c  dbus.h  isde-config-write.c  isde-config.c  isde-config.h  isde-cpufreq.c  isde-dialog.c  isde-mime.c  isde-monitor.h  isde-power.c  isde-power.h  isde-settings-plugin.h  isde-theme.c  isde-theme.h
platform/common/session/: autostart.c  child.c  child.h  dbus.c  session.h
screenshot/: CMakeLists.txt
screenshot/src/: capture.c  main.c  preview.c  save.c  screenshot.h
session/: CMakeLists.txt
session/src/: autostart.c  child.c  confirm.c  main.c  session.c  session.h
settings/: CMakeLists.txt
settings/src/: main.c  panel-appearance.c  panel-desktops.c  panel-display.c  panel-dm.c  panel-fonts.c  panel-input.c  panel-keyboard.c  panel-power.c  panel-terminal.c  settings.c  settings.h
term/: CMakeLists.txt
term/src/: main.c  term-config.c  term-pty.c  term-tsm.c  term-widget.c  term.h
tray-audio/: CMakeLists.txt  pipewire.md
tray-audio/src/: main.c  pipewire.c  popup.c  tray-audio.c  tray-audio.h
tray-battery/: CMakeLists.txt
tray-battery/src/: main.c  popup.c  tray-battery.c  tray-battery.h
tray-bt/: CMakeLists.txt
tray-bt/src/: agent.c  bluez.c  main.c  menu.c  tray-bt.c  tray-bt.h
tray-mount/: CMakeLists.txt
tray-mount/src/: dbus.c  main.c  menu.c  password_dialog.c  popup.c  tray-mount.c  tray-mount.h
tray-net/: CMakeLists.txt
tray-net/src/: agent.c  connman.c  main.c  menu.c  tray-net.c  tray-net.h
wm/: CMakeLists.txt
wm-compositor/: CMakeLists.txt
wm-compositor/src/: compositor.c  compositor.h  main.c
wm/src/: desktops.c  ewmh.c  frame.c  keys.c  main.c  placement.c  render.c  render.h  switcher.c  wm.c  wm.h
